--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -14,5 +14,5 @@ jobs:
     - uses: actions/checkout@v1
     - name: Test
       run: |
-        yarn install,
+        yarn install
         yarn test
