--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -15,4 +15,7 @@ jobs:
     - name: Install packages
       run: npm install
     - name: Test
-      run: npm run test
+      run:
+          ls
+          cat package.json 
+          npm run test
