--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -17,5 +17,7 @@ jobs:
         node-version: '10.x'
     - name: Install packages
       run: npm install
+    - name: Docker
+      run: docker ps -a
     - name: Test
       run: npm run test
