--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -1,23 +1,20 @@
 name: CI
 
-on: 
-  pull_request: 
-    branches: 
+on:
+  pull_request:
+    branches:
       - master
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-node@v1
-      with:
-        node-version: '10.x'
-    - name: Install packages
-      run: npm install
-    - name: Docker
-      run: docker ps -a
-    - name: Test
-      run: npm run test
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
+        with:
+          node-version: "10.x"
+      - name: Install packages
+        run: npm install
+      - name: Test
+        run: npm run test
