--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   "private": false,
   "devDependencies": {
     "@types/jest": "^24.0.23",
+    "@types/mysql2": "types/mysql2",
     "@types/node": "^12.7.11",
+    "@types/pg": "^7.11.2",
     "jest": "^24.9.0",
     "testcontainers": "^2.1.0",
     "ts-jest": "^24.2.0",
+    "ts-node": "^8.5.3",
     "typescript": "^3.6.3"
   },
   "dependencies": {
-    "@types/pg": "^7.11.2",
+    "mysql2": "^2.0.1",
     "pg": "^7.12.1"
   },
   "scripts": {
