--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": false,
   "devDependencies": {
     "@types/jest": "^24.0.23",
+    "@types/mssql": "^6.0.0",
     "@types/mysql2": "types/mysql2",
     "@types/node": "^12.7.11",
     "@types/pg": "^7.11.2",
@@ -18,6 +19,7 @@
     "typescript": "^3.6.3"
   },
   "dependencies": {
+    "mssql": "^6.0.1",
     "mysql2": "^2.0.1",
     "pg": "^7.12.1"
   },
