Attempt to fix npm packaging
- Ignore dist and ds_store
- Version bump
- Update main file and types
- Add prebuild script
- Add dist as package files
- Export files from index
- Update tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,12 @@
   "compilerOptions": {
     "preserveConstEnums": true,
     "target": "es2015",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "module": "commonjs",
     "outDir": "dist",
-    "sourceMap": true
+    "sourceMap": true,
+    "declaration": true
   },
-  "exclude": ["node_modules", "src/tests", "lib", "scripts"]
+  "include": ["src"],
+  "exclude": ["src/tests", "lib", "scripts"]
 }
