--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@dogfood20/agnostic-sql-migrator",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Database agnostic migrator tool for SQL databases",
-  "main": "index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "author": "aangelisc <andreas.christou@telefonica.com>",
   "license": "MIT",
   "private": false,
@@ -24,9 +25,13 @@
     "pg": "^7.12.1"
   },
   "scripts": {
+    "prebuild": "rm -rf ./dist",
     "build": "tsc",
     "test": "jest --runInBand --verbose"
   },
+  "files": [
+    "dist"
+  ],
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
