--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -3,7 +3,9 @@ name: Node.js Package
 on:
   push:
     branches:
-      - master
+      - 'master'
+    tags:
+      - 'v*'
 
 jobs:
   build:
@@ -30,4 +32,4 @@ jobs:
       - run: npm run build
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.LABTRON_PAT}}
+          NODE_AUTH_TOKEN: ${{secrets.NPM_PAT}}
