--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "agnostic-sql-migrator",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Database agnostic migrator tool for SQL databases",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -17,9 +17,12 @@
     "testcontainers": "^7.10.0",
     "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "mssql": "^7.1.0",
+    "mysql2": "^2.2.5",
+    "pg": "^8.6.0"
   },
-  "dependencies": {
+  "peerDependencies": {
     "mssql": "^7.1.0",
     "mysql2": "^2.2.5",
     "pg": "^8.6.0"
