Update import strategy to account for peer dependency change
- Use default export from all adapters
- Correctly import required adapter
- Update config and tests
- Remove excess code in tsconfig
- Bump version

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "declaration": true
   },
   "include": ["src"],
-  "exclude": ["src/tests", "lib", "scripts"]
+  "exclude": ["src/tests", "node_modules/**"]
 }
